Cherry pick of 834fe9a73b0dfc5f5f54da07ddfee5d3e6f749a2. Fixes #674 - Fix alignment issue in fixed fields in forms.

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -35,10 +35,11 @@ label {
 }
 
 .value {
-  padding-top: 5px;
+  line-height: 2.9em;
 
   &.annotation {
     font-size: 80%;
+    line-height: 1.5em;
     color: $gray3;
     max-width: 250px;
     padding-top: 10px;
